SPL/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> decl_stmt SEMI
Rule 5     statement -> assign_stmt SEMI
Rule 6     statement -> return_stmt SEMI
Rule 7     statement -> break_stmt SEMI
Rule 8     statement -> continue_stmt SEMI
Rule 9     statement -> expr_stmt SEMI
Rule 10    statement -> if_stmt
Rule 11    statement -> while_stmt
Rule 12    statement -> for_stmt
Rule 13    statement -> func_def
Rule 14    statement -> struct_def
Rule 15    decl_stmt -> type_spec ID
Rule 16    decl_stmt -> type_spec ID ASSIGN expr
Rule 17    decl_stmt -> type_spec ID LBRACKET expr RBRACKET
Rule 18    assign_stmt -> ID ASSIGN expr
Rule 19    assign_stmt -> ID DOT ID ASSIGN expr
Rule 20    assign_stmt -> ID LBRACKET expr RBRACKET ASSIGN expr
Rule 21    expr_stmt -> expr
Rule 22    return_stmt -> RETURN expr
Rule 23    return_stmt -> RETURN
Rule 24    break_stmt -> BREAK
Rule 25    continue_stmt -> CONTINUE
Rule 26    if_stmt -> IF LPAREN expr RPAREN block elif_chain else_block
Rule 27    elif_chain -> elif_chain ELIF LPAREN expr RPAREN block
Rule 28    elif_chain -> elif_chain ELSE IF LPAREN expr RPAREN block
Rule 29    elif_chain -> empty
Rule 30    else_block -> ELSE block
Rule 31    else_block -> empty
Rule 32    while_stmt -> WHILE LPAREN expr RPAREN block
Rule 33    for_stmt -> FOR LPAREN for_init SEMI expr SEMI assign_stmt RPAREN block
Rule 34    for_init -> decl_stmt
Rule 35    for_init -> assign_stmt
Rule 36    func_def -> VOID ID LPAREN param_list RPAREN block
Rule 37    func_def -> type_spec ID LPAREN param_list RPAREN block
Rule 38    param_list -> param_list COMA param
Rule 39    param_list -> param
Rule 40    param_list -> empty
Rule 41    param -> type_spec ID
Rule 42    param -> type_spec ID LBRACKET RBRACKET
Rule 43    type_spec -> INT
Rule 44    type_spec -> FLOAT
Rule 45    type_spec -> STRING_TYPE
Rule 46    type_spec -> ID
Rule 47    struct_def -> STRUCT ID LBRACE struct_body RBRACE SEMI
Rule 48    struct_def -> STRUCT ID LBRACE struct_body RBRACE
Rule 49    struct_body -> struct_body type_spec ID SEMI
Rule 50    struct_body -> empty
Rule 51    block -> LBRACE statement_list RBRACE
Rule 52    block -> LBRACE RBRACE
Rule 53    expr -> expr PLUS expr
Rule 54    expr -> expr MINUS expr
Rule 55    expr -> expr TIMES expr
Rule 56    expr -> expr DIVIDE expr
Rule 57    expr -> expr RELOP expr
Rule 58    expr -> expr AND_OP expr
Rule 59    expr -> expr OR_OP expr
Rule 60    expr -> BANG expr
Rule 61    expr -> expr AND expr
Rule 62    expr -> expr OR expr
Rule 63    expr -> NOT expr
Rule 64    expr -> MINUS expr
Rule 65    expr -> LPAREN expr RPAREN
Rule 66    expr -> ID LBRACKET expr RBRACKET
Rule 67    expr -> NUMBER
Rule 68    expr -> STRLIT
Rule 69    expr -> ID
Rule 70    expr -> ID DOT ID
Rule 71    expr -> ID LPAREN arg_list RPAREN
Rule 72    arg_list -> arg_list COMA expr
Rule 73    arg_list -> expr
Rule 74    arg_list -> empty
Rule 75    empty -> <empty>

Terminals, with rules where they appear

AND                  : 61
AND_OP               : 58
ASSIGN               : 16 18 19 20
BANG                 : 60
BREAK                : 24
COMA                 : 38 72
CONTINUE             : 25
DIVIDE               : 56
DOT                  : 19 70
ELIF                 : 27
ELSE                 : 28 30
FLOAT                : 44
FOR                  : 33
ID                   : 15 16 17 18 19 19 20 36 37 41 42 46 47 48 49 66 69 70 70 71
IF                   : 26 28
INT                  : 43
LBRACE               : 47 48 51 52
LBRACKET             : 17 20 42 66
LPAREN               : 26 27 28 32 33 36 37 65 71
MINUS                : 54 64
NOT                  : 63
NUMBER               : 67
OR                   : 62
OR_OP                : 59
PLUS                 : 53
RBRACE               : 47 48 51 52
RBRACKET             : 17 20 42 66
RELOP                : 57
RETURN               : 22 23
RPAREN               : 26 27 28 32 33 36 37 65 71
SEMI                 : 4 5 6 7 8 9 33 33 47 49
STRING_TYPE          : 45
STRLIT               : 68
STRUCT               : 47 48
TIMES                : 55
VOID                 : 36
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

arg_list             : 71 72
assign_stmt          : 5 33 35
block                : 26 27 28 30 32 33 36 37
break_stmt           : 7
continue_stmt        : 8
decl_stmt            : 4 34
elif_chain           : 26 27 28
else_block           : 26
empty                : 29 31 40 50 74
expr                 : 16 17 18 19 20 20 21 22 26 27 28 32 33 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 61 62 62 63 64 65 66 72 73
expr_stmt            : 9
for_init             : 33
for_stmt             : 12
func_def             : 13
if_stmt              : 10
param                : 38 39
param_list           : 36 37 38
program              : 0
return_stmt          : 6
statement            : 2 3
statement_list       : 1 2 51
struct_body          : 47 48 49
struct_def           : 14
type_spec            : 15 16 17 37 41 42 49
while_stmt           : 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . decl_stmt SEMI
    (5) statement -> . assign_stmt SEMI
    (6) statement -> . return_stmt SEMI
    (7) statement -> . break_stmt SEMI
    (8) statement -> . continue_stmt SEMI
    (9) statement -> . expr_stmt SEMI
    (10) statement -> . if_stmt
    (11) statement -> . while_stmt
    (12) statement -> . for_stmt
    (13) statement -> . func_def
    (14) statement -> . struct_def
    (15) decl_stmt -> . type_spec ID
    (16) decl_stmt -> . type_spec ID ASSIGN expr
    (17) decl_stmt -> . type_spec ID LBRACKET expr RBRACKET
    (18) assign_stmt -> . ID ASSIGN expr
    (19) assign_stmt -> . ID DOT ID ASSIGN expr
    (20) assign_stmt -> . ID LBRACKET expr RBRACKET ASSIGN expr
    (22) return_stmt -> . RETURN expr
    (23) return_stmt -> . RETURN
    (24) break_stmt -> . BREAK
    (25) continue_stmt -> . CONTINUE
    (21) expr_stmt -> . expr
    (26) if_stmt -> . IF LPAREN expr RPAREN block elif_chain else_block
    (32) while_stmt -> . WHILE LPAREN expr RPAREN block
    (33) for_stmt -> . FOR LPAREN for_init SEMI expr SEMI assign_stmt RPAREN block
    (36) func_def -> . VOID ID LPAREN param_list RPAREN block
    (37) func_def -> . type_spec ID LPAREN param_list RPAREN block
    (47) struct_def -> . STRUCT ID LBRACE struct_body RBRACE SEMI
    (48) struct_def -> . STRUCT ID LBRACE struct_body RBRACE
    (43) type_spec -> . INT
    (44) type_spec -> . FLOAT
    (45) type_spec -> . STRING_TYPE
    (46) type_spec -> . ID
    (53) expr -> . expr PLUS expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr TIMES expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr RELOP expr
    (58) expr -> . expr AND_OP expr
    (59) expr -> . expr OR_OP expr
    (60) expr -> . BANG expr
    (61) expr -> . expr AND expr
    (62) expr -> . expr OR expr
    (63) expr -> . NOT expr
    (64) expr -> . MINUS expr
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . ID LBRACKET expr RBRACKET
    (67) expr -> . NUMBER
    (68) expr -> . STRLIT
    (69) expr -> . ID
    (70) expr -> . ID DOT ID
    (71) expr -> . ID LPAREN arg_list RPAREN

    ID              shift and go to state 16
    RETURN          shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    VOID            shift and go to state 25
    STRUCT          shift and go to state 26
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    BANG            shift and go to state 31
    NOT             shift and go to state 32
    MINUS           shift and go to state 30
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 33
    STRLIT          shift and go to state 34

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    decl_stmt                      shift and go to state 4
    assign_stmt                    shift and go to state 5
    return_stmt                    shift and go to state 6
    break_stmt                     shift and go to state 7
    continue_stmt                  shift and go to state 8
    expr_stmt                      shift and go to state 9
    if_stmt                        shift and go to state 10
    while_stmt                     shift and go to state 11
    for_stmt                       shift and go to state 12
    func_def                       shift and go to state 13
    struct_def                     shift and go to state 14
    type_spec                      shift and go to state 15
    expr                           shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . decl_stmt SEMI
    (5) statement -> . assign_stmt SEMI
    (6) statement -> . return_stmt SEMI
    (7) statement -> . break_stmt SEMI
    (8) statement -> . continue_stmt SEMI
    (9) statement -> . expr_stmt SEMI
    (10) statement -> . if_stmt
    (11) statement -> . while_stmt
    (12) statement -> . for_stmt
    (13) statement -> . func_def
    (14) statement -> . struct_def
    (15) decl_stmt -> . type_spec ID
    (16) decl_stmt -> . type_spec ID ASSIGN expr
    (17) decl_stmt -> . type_spec ID LBRACKET expr RBRACKET
    (18) assign_stmt -> . ID ASSIGN expr
    (19) assign_stmt -> . ID DOT ID ASSIGN expr
    (20) assign_stmt -> . ID LBRACKET expr RBRACKET ASSIGN expr
    (22) return_stmt -> . RETURN expr
    (23) return_stmt -> . RETURN
    (24) break_stmt -> . BREAK
    (25) continue_stmt -> . CONTINUE
    (21) expr_stmt -> . expr
    (26) if_stmt -> . IF LPAREN expr RPAREN block elif_chain else_block
    (32) while_stmt -> . WHILE LPAREN expr RPAREN block
    (33) for_stmt -> . FOR LPAREN for_init SEMI expr SEMI assign_stmt RPAREN block
    (36) func_def -> . VOID ID LPAREN param_list RPAREN block
    (37) func_def -> . type_spec ID LPAREN param_list RPAREN block
    (47) struct_def -> . STRUCT ID LBRACE struct_body RBRACE SEMI
    (48) struct_def -> . STRUCT ID LBRACE struct_body RBRACE
    (43) type_spec -> . INT
    (44) type_spec -> . FLOAT
    (45) type_spec -> . STRING_TYPE
    (46) type_spec -> . ID
    (53) expr -> . expr PLUS expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr TIMES expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr RELOP expr
    (58) expr -> . expr AND_OP expr
    (59) expr -> . expr OR_OP expr
    (60) expr -> . BANG expr
    (61) expr -> . expr AND expr
    (62) expr -> . expr OR expr
    (63) expr -> . NOT expr
    (64) expr -> . MINUS expr
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . ID LBRACKET expr RBRACKET
    (67) expr -> . NUMBER
    (68) expr -> . STRLIT
    (69) expr -> . ID
    (70) expr -> . ID DOT ID
    (71) expr -> . ID LPAREN arg_list RPAREN

    $end            reduce using rule 1 (program -> statement_list .)
    ID              shift and go to state 16
    RETURN          shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    VOID            shift and go to state 25
    STRUCT          shift and go to state 26
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    STRING_TYPE     shift and go to state 29
    BANG            shift and go to state 31
    NOT             shift and go to state 32
    MINUS           shift and go to state 30
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 33
    STRLIT          shift and go to state 34

    statement                      shift and go to state 35
    decl_stmt                      shift and go to state 4
    assign_stmt                    shift and go to state 5
    return_stmt                    shift and go to state 6
    break_stmt                     shift and go to state 7
    continue_stmt                  shift and go to state 8
    expr_stmt                      shift and go to state 9
    if_stmt                        shift and go to state 10
    while_stmt                     shift and go to state 11
    for_stmt                       shift and go to state 12
    func_def                       shift and go to state 13
    struct_def                     shift and go to state 14
    type_spec                      shift and go to state 15
    expr                           shift and go to state 17

state 3

    (3) statement_list -> statement .

    ID              reduce using rule 3 (statement_list -> statement .)
    RETURN          reduce using rule 3 (statement_list -> statement .)
    BREAK           reduce using rule 3 (statement_list -> statement .)
    CONTINUE        reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    VOID            reduce using rule 3 (statement_list -> statement .)
    STRUCT          reduce using rule 3 (statement_list -> statement .)
    INT             reduce using rule 3 (statement_list -> statement .)
    FLOAT           reduce using rule 3 (statement_list -> statement .)
    STRING_TYPE     reduce using rule 3 (statement_list -> statement .)
    BANG            reduce using rule 3 (statement_list -> statement .)
    NOT             reduce using rule 3 (statement_list -> statement .)
    MINUS           reduce using rule 3 (statement_list -> statement .)
    LPAREN          reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    STRLIT          reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> decl_stmt . SEMI

    SEMI            shift and go to state 36


state 5

    (5) statement -> assign_stmt . SEMI

    SEMI            shift and go to state 37


state 6

    (6) statement -> return_stmt . SEMI

    SEMI            shift and go to state 38


state 7

    (7) statement -> break_stmt . SEMI

    SEMI            shift and go to state 39


state 8

    (8) statement -> continue_stmt . SEMI

    SEMI            shift and go to state 40


state 9

    (9) statement -> expr_stmt . SEMI

    SEMI            shift and go to state 41


state 10

    (10) statement -> if_stmt .

    ID              reduce using rule 10 (statement -> if_stmt .)
    RETURN          reduce using rule 10 (statement -> if_stmt .)
    BREAK           reduce using rule 10 (statement -> if_stmt .)
    CONTINUE        reduce using rule 10 (statement -> if_stmt .)
    IF              reduce using rule 10 (statement -> if_stmt .)
    WHILE           reduce using rule 10 (statement -> if_stmt .)
    FOR             reduce using rule 10 (statement -> if_stmt .)
    VOID            reduce using rule 10 (statement -> if_stmt .)
    STRUCT          reduce using rule 10 (statement -> if_stmt .)
    INT             reduce using rule 10 (statement -> if_stmt .)
    FLOAT           reduce using rule 10 (statement -> if_stmt .)
    STRING_TYPE     reduce using rule 10 (statement -> if_stmt .)
    BANG            reduce using rule 10 (statement -> if_stmt .)
    NOT             reduce using rule 10 (statement -> if_stmt .)
    MINUS           reduce using rule 10 (statement -> if_stmt .)
    LPAREN          reduce using rule 10 (statement -> if_stmt .)
    NUMBER          reduce using rule 10 (statement -> if_stmt .)
    STRLIT          reduce using rule 10 (statement -> if_stmt .)
    $end            reduce using rule 10 (statement -> if_stmt .)
    RBRACE          reduce using rule 10 (statement -> if_stmt .)


state 11

    (11) statement -> while_stmt .

    ID              reduce using rule 11 (statement -> while_stmt .)
    RETURN          reduce using rule 11 (statement -> while_stmt .)
    BREAK           reduce using rule 11 (statement -> while_stmt .)
    CONTINUE        reduce using rule 11 (statement -> while_stmt .)
    IF              reduce using rule 11 (statement -> while_stmt .)
    WHILE           reduce using rule 11 (statement -> while_stmt .)
    FOR             reduce using rule 11 (statement -> while_stmt .)
    VOID            reduce using rule 11 (statement -> while_stmt .)
    STRUCT          reduce using rule 11 (statement -> while_stmt .)
    INT             reduce using rule 11 (statement -> while_stmt .)
    FLOAT           reduce using rule 11 (statement -> while_stmt .)
    STRING_TYPE     reduce using rule 11 (statement -> while_stmt .)
    BANG            reduce using rule 11 (statement -> while_stmt .)
    NOT             reduce using rule 11 (statement -> while_stmt .)
    MINUS           reduce using rule 11 (statement -> while_stmt .)
    LPAREN          reduce using rule 11 (statement -> while_stmt .)
    NUMBER          reduce using rule 11 (statement -> while_stmt .)
    STRLIT          reduce using rule 11 (statement -> while_stmt .)
    $end            reduce using rule 11 (statement -> while_stmt .)
    RBRACE          reduce using rule 11 (statement -> while_stmt .)


state 12

    (12) statement -> for_stmt .

    ID              reduce using rule 12 (statement -> for_stmt .)
    RETURN          reduce using rule 12 (statement -> for_stmt .)
    BREAK           reduce using rule 12 (statement -> for_stmt .)
    CONTINUE        reduce using rule 12 (statement -> for_stmt .)
    IF              reduce using rule 12 (statement -> for_stmt .)
    WHILE           reduce using rule 12 (statement -> for_stmt .)
    FOR             reduce using rule 12 (statement -> for_stmt .)
    VOID            reduce using rule 12 (statement -> for_stmt .)
    STRUCT          reduce using rule 12 (statement -> for_stmt .)
    INT             reduce using rule 12 (statement -> for_stmt .)
    FLOAT           reduce using rule 12 (statement -> for_stmt .)
    STRING_TYPE     reduce using rule 12 (statement -> for_stmt .)
    BANG            reduce using rule 12 (statement -> for_stmt .)
    NOT             reduce using rule 12 (statement -> for_stmt .)
    MINUS           reduce using rule 12 (statement -> for_stmt .)
    LPAREN          reduce using rule 12 (statement -> for_stmt .)
    NUMBER          reduce using rule 12 (statement -> for_stmt .)
    STRLIT          reduce using rule 12 (statement -> for_stmt .)
    $end            reduce using rule 12 (statement -> for_stmt .)
    RBRACE          reduce using rule 12 (statement -> for_stmt .)


state 13

    (13) statement -> func_def .

    ID              reduce using rule 13 (statement -> func_def .)
    RETURN          reduce using rule 13 (statement -> func_def .)
    BREAK           reduce using rule 13 (statement -> func_def .)
    CONTINUE        reduce using rule 13 (statement -> func_def .)
    IF              reduce using rule 13 (statement -> func_def .)
    WHILE           reduce using rule 13 (statement -> func_def .)
    FOR             reduce using rule 13 (statement -> func_def .)
    VOID            reduce using rule 13 (statement -> func_def .)
    STRUCT          reduce using rule 13 (statement -> func_def .)
    INT             reduce using rule 13 (statement -> func_def .)
    FLOAT           reduce using rule 13 (statement -> func_def .)
    STRING_TYPE     reduce using rule 13 (statement -> func_def .)
    BANG            reduce using rule 13 (statement -> func_def .)
    NOT             reduce using rule 13 (statement -> func_def .)
    MINUS           reduce using rule 13 (statement -> func_def .)
    LPAREN          reduce using rule 13 (statement -> func_def .)
    NUMBER          reduce using rule 13 (statement -> func_def .)
    STRLIT          reduce using rule 13 (statement -> func_def .)
    $end            reduce using rule 13 (statement -> func_def .)
    RBRACE          reduce using rule 13 (statement -> func_def .)


state 14

    (14) statement -> struct_def .

    ID              reduce using rule 14 (statement -> struct_def .)
    RETURN          reduce using rule 14 (statement -> struct_def .)
    BREAK           reduce using rule 14 (statement -> struct_def .)
    CONTINUE        reduce using rule 14 (statement -> struct_def .)
    IF              reduce using rule 14 (statement -> struct_def .)
    WHILE           reduce using rule 14 (statement -> struct_def .)
    FOR             reduce using rule 14 (statement -> struct_def .)
    VOID            reduce using rule 14 (statement -> struct_def .)
    STRUCT          reduce using rule 14 (statement -> struct_def .)
    INT             reduce using rule 14 (statement -> struct_def .)
    FLOAT           reduce using rule 14 (statement -> struct_def .)
    STRING_TYPE     reduce using rule 14 (statement -> struct_def .)
    BANG            reduce using rule 14 (statement -> struct_def .)
    NOT             reduce using rule 14 (statement -> struct_def .)
    MINUS           reduce using rule 14 (statement -> struct_def .)
    LPAREN          reduce using rule 14 (statement -> struct_def .)
    NUMBER          reduce using rule 14 (statement -> struct_def .)
    STRLIT          reduce using rule 14 (statement -> struct_def .)
    $end            reduce using rule 14 (statement -> struct_def .)
    RBRACE          reduce using rule 14 (statement -> struct_def .)


state 15

    (15) decl_stmt -> type_spec . ID
    (16) decl_stmt -> type_spec . ID ASSIGN expr
    (17) decl_stmt -> type_spec . ID LBRACKET expr RBRACKET
    (37) func_def -> type_spec . ID LPAREN param_list RPAREN block

    ID              shift and go to state 42


state 16

    (18) assign_stmt -> ID . ASSIGN expr
    (19) assign_stmt -> ID . DOT ID ASSIGN expr
    (20) assign_stmt -> ID . LBRACKET expr RBRACKET ASSIGN expr
    (46) type_spec -> ID .
    (66) expr -> ID . LBRACKET expr RBRACKET
    (69) expr -> ID .
    (70) expr -> ID . DOT ID
    (71) expr -> ID . LPAREN arg_list RPAREN

    ASSIGN          shift and go to state 43
    DOT             shift and go to state 44
    LBRACKET        shift and go to state 45
    ID              reduce using rule 46 (type_spec -> ID .)
    PLUS            reduce using rule 69 (expr -> ID .)
    MINUS           reduce using rule 69 (expr -> ID .)
    TIMES           reduce using rule 69 (expr -> ID .)
    DIVIDE          reduce using rule 69 (expr -> ID .)
    RELOP           reduce using rule 69 (expr -> ID .)
    AND_OP          reduce using rule 69 (expr -> ID .)
    OR_OP           reduce using rule 69 (expr -> ID .)
    AND             reduce using rule 69 (expr -> ID .)
    OR              reduce using rule 69 (expr -> ID .)
    SEMI            reduce using rule 69 (expr -> ID .)
    LPAREN          shift and go to state 46


state 17

    (21) expr_stmt -> expr .
    (53) expr -> expr . PLUS expr
    (54) expr -> expr . MINUS expr
    (55) expr -> expr . TIMES expr
    (56) expr -> expr . DIVIDE expr
    (57) expr -> expr . RELOP expr
    (58) expr -> expr . AND_OP expr
    (59) expr -> expr . OR_OP expr
    (61) expr -> expr . AND expr
    (62) expr -> expr . OR expr

    SEMI            reduce using rule 21 (expr_stmt -> expr .)
    PLUS            shift and go to state 47
    MINUS           shift and go to state 48
    TIMES           shift and go to state 49
    DIVIDE          shift and go to state 50
    RELOP           shift and go to state 51
    AND_OP          shift and go to state 52
    OR_OP           shift and go to state 53
    AND             shift and go to state 54
    OR              shift and go to state 55


state 18

    (22) return_stmt -> RETURN . expr
    (23) return_stmt -> RETURN .
    (53) expr -> . expr PLUS expr
    (54) expr -> . expr MINUS expr
    (55) expr -> . expr TIMES expr
    (56) expr -> . expr DIVIDE expr
    (57) expr -> . expr RELOP expr
    (58) expr -> . expr AND_OP expr
    (59) expr -> . expr OR_OP expr
    (60) expr -> . BANG expr
    (61) expr -> . expr AND expr
    (62) expr -> . expr OR expr
    (63) expr -> . NOT expr
    (64) expr -> . MINUS expr
    (65) expr -> . LPAREN expr RPAREN
    (66) expr -> . ID LBRACKET expr RBRACKET
    (67) expr -> . NUMBER
    (68) expr -> . STRLIT
    (69) expr -> . ID
    (70) expr -> . ID DOT ID
    (71) expr -> . ID LPAREN arg_list RPAREN

    SEMI            reduce using rule 23 (return_stmt -> RETURN .)
    BANG            shift and go to state 31
    NOT             shift and go to state 32
    MINUS           shift and go to state 30
    LPAREN          shift and go to state 22
    ID              shift and go to state 57
    NUMBER          shift and go to state 33
    STRLIT          shift and go to state 34

    expr                           shift and go to state 56

state 19

    (24) break_stmt -> BREAK .

    SEMI            reduce using rule 24 (break_stmt -> BREAK .)


state 20

    (25) continue_stmt -> CONTINUE .

    SEMI            reduce using rule 25 (continue_stmt -> CONTINUE .)


state 21

    (26) if_stmt -> IF . LPAREN expr RPAREN block elif_chain else_block

    LPAREN          shift and go to state 58

